Feat: 이메일 본인인증 관련 에러 처리(#1)